<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_related_links"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:background="#ddd"
    tools:context="com.csi.institutionsprofile.Activity.ActivityRelatedLinks">
    <include layout="@layout/toolbar"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <!-- 1st link-->
            <RelativeLayout
        android:id="@+id/relativeFirstLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="11dp"
        android:paddingRight="11dp"
        android:paddingTop="11dp"
        android:padding="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:elevation="15dp"
        android:layout_marginTop="11dp"
        android:background="@drawable/profile_card_style">
        <!--title Label-->
        <TextView
            android:id="@+id/textViewTitleBanBasis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/banbesis"
            android:layout_marginLeft="11dp"
            android:layout_marginRight="11dp"
            android:layout_marginTop="11dp"
            android:textSize="@dimen/textsize17sp"
            android:textColor="@color/brandColorLight"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="0dp"/>
        <!--description Label-->
        <TextView
            android:id="@+id/textViewDesBanbesis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/banbasisDes"
            android:layout_marginLeft="11dp"
            android:layout_marginRight="11dp"
            android:layout_marginTop="11dp"
            android:textSize="@dimen/textsize12sp"
            android:textColor="@color/textColorTitleSmall"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/textViewTitleBanBasis"
            android:layout_marginBottom="0dp"/>
        <!--link button label -->
        <Button
            android:id="@+id/buttonLinkBANBASIS"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_marginTop="11dp"
            android:layout_marginBottom="11dp"
            android:background="@drawable/link_button_style"
            android:textSize="11sp"
            android:text="@string/link"
            android:elevation="10dp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:layout_below="@+id/textViewDesBanbesis"
            android:layout_marginRight="11dp"
            android:layout_marginLeft="11dp"/>
    </RelativeLayout>
            <!-- 2nd link-->
            <RelativeLayout
            android:id="@+id/relativeSecondLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="11dp"
            android:paddingRight="11dp"
            android:paddingTop="11dp"
            android:padding="0dp"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:elevation="15dp"
            android:layout_marginTop="11dp"
            android:layout_below="@+id/relativeFirstLink"
            android:background="@drawable/profile_card_style">
            <!--title Label-->
            <TextView
                android:id="@+id/textViewTitleHSSP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/hsspTitle"
                android:layout_marginLeft="11dp"
                android:layout_marginRight="11dp"
                android:layout_marginTop="11dp"
                android:textSize="@dimen/textsize17sp"
                android:textColor="@color/brandColorLight"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="0dp"/>
            <!--description Label-->
            <TextView
                android:id="@+id/textViewDesHSSP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/hsspDes"
                android:layout_marginLeft="11dp"
                android:layout_marginRight="11dp"
                android:layout_marginTop="11dp"
                android:textSize="@dimen/textsize12sp"
                android:textColor="@color/textColorTitleSmall"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/textViewTitleHSSP"
                android:layout_marginBottom="0dp"/>
            <!--link button label -->
            <Button
                android:id="@+id/buttonLinkHSSP"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_marginTop="11dp"
                android:layout_marginBottom="11dp"
                android:background="@drawable/link_button_style"
                android:textSize="11sp"
                android:text="@string/link"
                android:elevation="10dp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:layout_below="@+id/textViewDesHSSP"
                android:layout_marginRight="11dp"
                android:layout_marginLeft="11dp"/>
        </RelativeLayout>
            <!-- 3rd link-->
            <RelativeLayout
                android:id="@+id/relativeThirdLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="11dp"
                android:paddingRight="11dp"
                android:paddingTop="11dp"
                android:padding="0dp"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:elevation="15dp"
                android:layout_marginTop="11dp"
                android:layout_below="@+id/relativeSecondLink"
                android:background="@drawable/profile_card_style">
                <!--title Label-->
                <TextView
                    android:id="@+id/textViewTitleMinistryEducation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/ministryTitle"
                    android:layout_marginLeft="11dp"
                    android:layout_marginRight="11dp"
                    android:layout_marginTop="11dp"
                    android:textSize="@dimen/textsize17sp"
                    android:textColor="@color/brandColorLight"
                    android:layout_alignParentLeft="true"
                    android:layout_marginBottom="0dp"/>
                <!--description Label-->
                <!--<TextView
                    android:id="@+id/textViewDesMinistry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/hsspDes"
                    android:layout_marginLeft="11dp"
                    android:layout_marginRight="11dp"
                    android:layout_marginTop="11dp"
                    android:textSize="@dimen/textsize12sp"
                    android:textColor="@color/textColorTitleSmall"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@id/textViewTitleMinistryEducation"
                    android:layout_marginBottom="0dp"/>-->
                <!--link button label -->
                <Button
                    android:id="@+id/buttonLinkMinistry"
                    android:layout_width="80dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="11dp"
                    android:layout_marginBottom="11dp"
                    android:background="@drawable/link_button_style"
                    android:textSize="11sp"
                    android:text="@string/link"
                    android:elevation="10dp"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:layout_below="@+id/textViewTitleMinistryEducation"
                    android:layout_marginRight="11dp"
                    android:layout_marginLeft="11dp"/>
            </RelativeLayout>
            <!-- 4th link-->
            <RelativeLayout
                android:id="@+id/relativeForthLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="11dp"
                android:paddingRight="11dp"
                android:paddingTop="11dp"
                android:padding="0dp"
                android:layout_marginBottom="11dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:elevation="15dp"
                android:layout_marginTop="11dp"
                android:layout_below="@+id/relativeThirdLink"
                android:background="@drawable/profile_card_style">
                <!--title Label-->
                <TextView
                    android:id="@+id/textViewTitleDshe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/dsheTitle"
                    android:layout_marginLeft="11dp"
                    android:layout_marginRight="11dp"
                    android:layout_marginTop="11dp"
                    android:textSize="@dimen/textsize17sp"
                    android:textColor="@color/brandColorLight"
                    android:layout_alignParentLeft="true"
                    android:layout_marginBottom="0dp"/>
                <!--description Label-->
                <!--<TextView
                    android:id="@+id/textViewDesMinistry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/hsspDes"
                    android:layout_marginLeft="11dp"
                    android:layout_marginRight="11dp"
                    android:layout_marginTop="11dp"
                    android:textSize="@dimen/textsize12sp"
                    android:textColor="@color/textColorTitleSmall"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@id/textViewTitleMinistryEducation"
                    android:layout_marginBottom="0dp"/>-->
                <!--link button label -->
                <Button
                    android:id="@+id/buttonLinkDshe"
                    android:layout_width="80dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="11dp"
                    android:layout_marginBottom="11dp"
                    android:background="@drawable/link_button_style"
                    android:textSize="11sp"
                    android:text="@string/link"
                    android:elevation="10dp"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:layout_below="@+id/textViewTitleDshe"
                    android:layout_marginRight="11dp"
                    android:layout_marginLeft="11dp"/>
            </RelativeLayout>

    </RelativeLayout>
    </ScrollView>
    </RelativeLayout>
